Id wrong on div, basic three js render working!

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <script type="text/javascript" src="jquery-1.8.3.js"></script>
   <script type="text/javascript" src="threejs/build/three.js"></script>
   <script type="text/javascript" src="dat.gui.js"></script>
+  <script type="text/javascript" src="ebauche.js"></script>
 </head>
 
 <body>
-  <div id='#container'></div>
+  <div id='container'></div>
 </body>
 </html>
