Facebook icon, semi accurate hand speed, debug gui, 12 oclock mark

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="threejs/build/three.js"></script>
   <script type="text/javascript" src="dat.gui.js"></script>
   <script type="text/javascript" src="ebauche.js"></script>
+  <meta property="og:image" content="screenshot.png"/>
 </head>
 
 <body>
